[package]
name = "zdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[cli]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
rand = "0.8.4"
log = "0.4.14"

[dependencies.uuid]
version = "1.9.1" 
features = ["v4"]